# audiofx-rs

./: .gitignore  Cargo.toml  README.md
src/: biquad.rs  conversion.rs  error.rs  frame.rs  main.rs  progress.rs
src/analyzer/: loudness.rs  mod.rs  rms.rs  true_peak.rs
src/effects/: amplify.rs  compressor.rs  mod.rs
src/filters/: biquad.rs  fir.rs  lag1.rs  mod.rs  mov_max.rs  mov_rms.rs
src/gui/: main_window.rs  mod.rs  sidebar.rs  workspace.rs
src/gui/widgets/: audio_track.rs  image_button.rs  mod.rs  op_row.rs  timeline.rs  waveform.rs
src/operations/: mod.rs  normalize.rs
