[package]
name = "audiofx-rs"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "Audio effects implemented in Rust"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
clap = { version=">=3.1.5", features=["derive"] }
hound = ">=3.5.0"
kahan = "0.1.4"
